created JS file, added quiz questions and answers

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <button id="next-button">Next</button>
         </div>
 
-    
     </div>   
     
+    <script src="assets/js/script.js"></script>
   
 </body>
 </html>
