--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 
 <body>
     <div class="quiz-container">
-        <div class="header">
-            <h1 class="title">Coding Quiz</h1>
-            <h3 class="score">Score: ____/10</h3>
-            <h3 class="time">Time left: _____s</h3>
+        <div id="quiz-container">
+            <div id="question"></div>
+            <div id="answer-buttons"></div>
+            <button id="next-button" style="display: none;">Next</button>
         </div>
-        <div class="quiz">
-            <h2 id="question">Question goes here</h2>
-            <div id="answer-buttons">
-                <button class="button">Answer 1</button>
-                <button class="button">Answer 2</button>
-                <button class="button">Answer 3</button>
-                <button class="button">Answer 4</button>
-            </div>
-            <button id="next-button">Next</button>
+        <div id="score" class="score" style="display: none;"></div>
+        <div id="initials-container" style="display: none;">
+            <label for="initials">Enter your initials:</label>
+            <input type="text" id="initials" maxlength="3">
+            <button id="save-button">Save</button>
         </div>
 
     </div>   
